--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "yandex__practicum",
+  "homepage": "https://DmV46.github.io/cards/",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,11 +20,13 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "file-loader": "^5.0.2",
-    "gh-pages": "^2.1.1",
+    "gh-pages": "~2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
@@ -32,8 +35,9 @@
   "scripts": {
     "lint": "eslint --debug js/",
     "lint:write": "eslint --debug js/ --fix",
-    "build": "rimraf dist && webpack --mode production",
-    "dev": "webpack-dev-server --mode development --open --watch"
+    "build": "NODE_ENV=production rimraf dist && webpack --mode production",
+    "dev": "NODE_ENV=development webpack-dev-server --mode development --open --watch",
+    "deploy": "NODE_ENV=production gh-pages -d dist"
   },
   "author": "Dmitry Volodin",
   "license": "ISC"
