--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "scripts": {
     "lint": "eslint --debug js/",
     "lint:write": "eslint --debug js/ --fix",
+    "debug": "node --inspect index.js",
     "build": "NODE_ENV=production rimraf dist && webpack --mode production",
     "dev": "NODE_ENV=development webpack-dev-server --mode development --open --watch",
     "deploy": "NODE_ENV=production gh-pages -d dist"
