--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-import": "^2.18.2",
     "file-loader": "^5.0.2",
     "gh-pages": "~2.1.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.8.0",
@@ -33,8 +34,8 @@
     "webpack-md5-hash": "0.0.6"
   },
   "scripts": {
-    "lint": "eslint --debug js/",
-    "lint:write": "eslint --debug js/ --fix",
+    "lint": "eslint --debug src/",
+    "lint:write": "eslint --debug src/ --fix",
     "build": "NODE_ENV=production rimraf dist && webpack --mode production",
     "dev": "NODE_ENV=development webpack-dev-server --mode development --open --watch",
     "deploy": "NODE_ENV=production gh-pages -d dist"
