--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "css-loader": "^3.3.0",
     "cssnano": "^4.1.10",
     "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "file-loader": "^5.0.2",
     "gh-pages": "~2.1.1",
     "html-loader": "^0.5.5",
@@ -27,6 +29,7 @@
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "prettier": "^1.19.1",
     "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
